<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:background="#ece6f4">

        <!-- Profile Circle with First Letter -->
        <TextView
            android:id="@+id/profile_circle"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/circular_background"
            android:gravity="center"
            android:text="A"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:elevation="2dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <!-- Contact Name -->
        <TextView
            android:id="@+id/contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_circle"
            android:layout_marginStart="16dp"
            android:layout_alignTop="@id/profile_circle"
            android:text="@string/contact_name"
            android:textSize="18sp"
            android:textColor="#333333"
            android:textStyle="bold" />

        <!-- Contact Phone -->
        <TextView
            android:id="@+id/contact_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_circle"
            android:layout_marginStart="16dp"
            android:layout_below="@id/contact_name"
            android:text="@string/contact_phone"
            android:textSize="14sp"
            android:textColor="#666666" />

        <!-- Action Button -->
        <ImageButton
            android:id="@+id/action_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_button"
            android:src="@drawable/baseline_more_vert_24"
            app:tint="#666666" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>
